--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import { RegisterForm } from "../components/auth/RegisterForm";
 
-const recaptchaSiteKey = import.meta.env.RECAPTCHA_SITE_KEY;
+const recaptchaSiteKey = import.meta.env.PUBLIC_RECAPTCHA_SITE_KEY;
 ---
 
 <Layout
@@ -15,4 +15,3 @@ const recaptchaSiteKey = import.meta.env.RECAPTCHA_SITE_KEY;
     </div>
   </section>
 </Layout>
-
