--- a/src/pages/surveys/[slug]/fill.astro
+++ b/src/pages/surveys/[slug]/fill.astro
@@ -50,7 +50,7 @@ try {
 
 <Layout title={`Survey: ${competition.name}`} description={`Share your feedback about ${competition.name}`}>
   <div class="container mx-auto px-4 py-8 md:py-12">
-    <div class="max-w-3xl mx-auto">
+    <div class="max-w-3xl mx-auto" data-testid="survey-fill-page">
       <SurveyFillForm
         client:only="react"
         initialSurvey={survey}
