--- a/src/pages/update-password.astro
+++ b/src/pages/update-password.astro
@@ -3,14 +3,10 @@ import Layout from "../layouts/Layout.astro";
 import { UpdatePasswordForm } from "../components/auth/UpdatePasswordForm";
 ---
 
-<Layout
-  title="Update Password - PilotVoice"
-  description="Set a new password for your PilotVoice account."
->
+<Layout title="Update Password - PilotVoice" description="Set a new password for your PilotVoice account.">
   <section class="min-h-[80vh] flex items-center justify-center px-4 py-16">
     <div class="w-full max-w-md">
       <UpdatePasswordForm client:load />
     </div>
   </section>
 </Layout>
-
